--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "copy-webpack-plugin": "^1.1.1",
     "coveralls": "^2.11.6",
     "css-loader": "^0.23.1",
+    "deep-freeze": "0.0.1",
     "eslint": "^1.10.3",
     "eslint-plugin-nodeca": "^1.0.3",
     "file-loader": "^0.8.5",
